[package]
name = "engine"
version = "0.1.0"
authors = ["Marcin Kozlowski <marcin.kozlowski122@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "engine"

[dependencies]
rand = "0.8.2"
num-traits = "0.2"
num-derive = "0.3.3"