[package]
name = "game_runner"
version = "0.1.0"
authors = ["Marcin Kozlowski <marcin.kozlowski122@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "game_runner"


[dependencies]
engine = { path = "../engine" }
rand = "0.8.2"
rand_distr = "0.4.0"