[package]
name = "rpc_server"
version = "0.1.0"
authors = ["Marcin Kozlowski <marcin.kozlowski122@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rpc_server"

[dependencies]
engine = { path = "../engine" }