[package]
name = "rpc_server"
version = "0.1.0"
authors = ["Marcin Kozlowski <marcin.kozlowski122@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rpc_server"

[lib]
name = "protos"
path = "protos/mod.rs"

[dependencies]
rand = "*"
protobuf = "2"
bytes = "1.0.1"
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
engine = { path = "../engine" }
game_runner = { path = "../game_runner" }

[build-dependencies]
tonic-build = "0.4"
protobuf-codegen-pure = "2.22.0"
prost-build = "0.7"